--- a/cv32e40s/tests/programs/custom/debug_priv_test/test.yaml
+++ b/cv32e40s/tests/programs/custom/debug_priv_test/test.yaml
@@ -1,7 +1,7 @@
 # Test definition YAML for test
 
 # Debug directed test
-name: debug_priv_tests
+name: debug_priv_test
 uvm_test: uvmt_$(CV_CORE_LC)_firmware_test_c
 program: debug_priv_tests
 description: >
